[package]
name = "cohost-obsidian-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.129"
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.89"
chrono = { version = "0.4.38", default-features = false, features = ["std", "clock", "serde"] }
