[package]
name = "cohost-obsidian-bridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
publish = false
default-run = "chostsidian"

[[bin]]
name = "chostsidian"
path = "src/main.rs"

[profile.release]
debug = "line-tables-only"
lto = "thin"

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.132"
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.92"
chrono = { version = "0.4.38", default-features = false, features = ["std", "clock", "serde", "unstable-locales"] }
indexmap = "2.6.0"
